---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: ????
  Info:
    - Remove remnants of itemdata
    - Make the shortcut able to close the gui again
    - Have reverse select toggle the gui as well
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025. 01. 27
  Info:
    - Attempt to design a custom planner icon
    - Attempt to set the shortcut description
    - Add bootleg shortcut description due to https://forums.factorio.com/126363
    - Embed normal quality indicator inside icon
    - Label the selection tool with the quality's name
    - Label the spawned one as normal immediately
    - Just use a grey upgrade planner as the icon
    - Experiment with tinted selection tools per quality
    - Just stick with one selection tool prototype
    - Uppercase the first char of the quality name (translating is tedious)
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025. 01. 26
  Info:
    - Begin selection tool conversion
    - Add shortcut button (resolves #20)
    - Test changing quality with scrolling
    - Reordering
    - Generate greyscale quality category icons
    - Swap beacon icon with module icon
    - Rename inserters to filters (since it includes loaders and splitters too)
    - Decrease generator line width
    - Create initial gui frame
    - Load the quality categories as buttons
    - Give the quality category buttons a label
    - Localize the quality category names
    - Give the quality categories a description
    - Give each quality category a switch button
    - Add an inner frame for looks
    - Cleanup 1.0.1 - 1.0.8 inventories better
    - Disable the switch for everything but the entities
    - Define default switch states
    - Attempt to store itemdata within each quality upgrade planner