@@ -1,5 +1,3 @@
-require("prototypes.quality-categories")
-
 local item_sounds = require("__base__.prototypes.item_sounds")
 
 local selection_tool = {
