@@ -13,6 +13,7 @@ filters=Filters
 recipes=Recipes
 modules=Modules
 requests=Requests
+constants=Constants
 conditions=Conditions
 
 [quality-category-description]
@@ -20,5 +21,6 @@ entities=The quality of things you can place.
 filters=The quality of inserter/loader/splitter filters.
 recipes=The quality of the recipes themselves.
 modules=The quality of modules installed here.
-requests=The quality of logistic group things.
+requests=The quality of logistic requests.
+constants=The quality of signal constants.
 conditions=The quality of enable/disable circuit & logistic conditions.
