@@ -2,26 +2,37 @@ return {
   quality_categories = {
     {
       name = "entities",
+      sprite = "entity/transport-belt",
       default_switch_state = "right",
     },
     {
       name = "filters",
+      sprite = "entity/inserter",
       not_yet_implemented = true,
     },
     {
       name = "recipes",
+      sprite = "entity/assembling-machine-1",
       not_yet_implemented = true,
     },
     {
       name = "modules",
+      sprite = "entity/beacon",
       not_yet_implemented = true,
     },
     {
       name = "requests",
+      sprite = "entity/blue-chest", -- the OG requester chest sprite, not touched by aai containers.
+      not_yet_implemented = true,
+    },
+    {
+      name = "constants",
+      sprite = "entity/constant-combinator",
       not_yet_implemented = true,
     },
     {
       name = "conditions",
+      sprite = "entity/power-switch",
       not_yet_implemented = true,
     },
   }
